--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>
   <model-viewer
     src="mask-_animation.glb"
-    auto-rotate
     camera-controls
+    autoplay
     exposure="1"
   ></model-viewer>
 </body>
 </html>
+
