--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     src="mask-_animation.glb"
     camera-controls
     autoplay
+    touch-action="none"
+    interaction-prompt="none"
     exposure="1"
   ></model-viewer>
 </body>
 </html>
+
 
